--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
+    ext.kotlin_version = '1.4.10'
+
     repositories {
         google()
         mavenCentral()
@@ -15,4 +18,21 @@ buildscript {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+
+
+ext {
+    activityVersion = '1.2.1'
+    appCompatVersion = '1.2.0'
+    constraintLayoutVersion = '2.0.4'
+    coreTestingVersion = '2.1.0'
+    coroutines = '1.3.9'
+    lifecycleVersion = '2.3.0'
+    materialVersion = '1.2.1'
+    roomVersion = '2.2.6'
+    // testing
+    junitVersion = '4.13.1'
+    espressoVersion = '3.1.0'
+    androidxJunitVersion = '1.1.2'
 }
